--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     <section>
       <p>In this <em>sample site</em>, we'll show a list of <a href="http://github.com">Github</a> projects <span>and the data</span> about <strong>those projects</strong>.</p>
       <form action="http://wilder.azurewebsites.net/echo" method="POST">
+      <label for="searchPhrase">Search Phrase:</label>
         <input name="searchPhrase" /> <br/>
         <input type="checkbox" name="useStars" checked="true" /> Use Stars? <br/>
+        <label for="langChoice">Language Choice:</lebel>
         <select name="langChoice">
           <option>All</option>
           <option selected>Javascript</option>
