--- a/index.html
+++ b/index.html
@@ -39,13 +39,15 @@
           <input type="submit" value="search" />
           </form>
           <div id="results" class="bordered-image">
-            This is where results will live...eventually.
+            <button id="toggleButton">Hide</button>
+            <div id="resultList">This is where results will go</div>
           </div>
       </section>
       <footer>
         &copy; 2017 &gt; &lt; &#4567;
       </footer>
     </div>
+    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
   </body>
 </html>
