--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </header>
       <section id="main">
         <p>In this <em>sample site</em>, we'll show a list of <a href="http://github.com">Github</a> projects <span>and the data</span> about <strong>those projects</strong>.</p>
-        <form action="http://wilder.azurewebsites.net/echo" method="POST" class="bordered-image simple-form" >
+        <form action="http://wilder.azurewebsites.net/echo" method="POST" class="bordered-image simple-form" id="gitHubSearchForm">
         <label for="searchPhrase">Search Phrase:</label>
           <input name="searchPhrase" id="searchPhrase" /> <br/>
           <label for="useStars">Use Stars?</label>
